--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> Origami Designs
-</title>
+    <title>Origami Designs</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
- <div class="header">
-<div class="menu">
-<h1>Orgami Designs</h1>
-<a href="about.html">About Us</a>
-<a href="followus.html">Follow Us</a>
+<div class="header">
+    <div class="menu">
+        <div ><a href ="#">☰</a></div>
+        <div >Origami Designs</div>
+        <div ><a href ="about.html">About Us</a></div>
+    </div>
 </div>
-</div>
-
+<div class ="bodyimg">
+      <img src="main2.jpg" height="600px" width="100%">
+      <p>
+        Origami Instructions and Diagrams  
+      </p>
+      <h3><br>
+      Step by Step diagrams are probably the most popular and easiest to follow way to show how to fold things out of paper. 
+      Trying to find good origami instructions on the Internet can be a lot of work though. To help your search we’ve put
+      together the largest database of free origami diagrams anywhere on the Internet.
+      </h3>
+  </div>
 
 
 <div class="grid">
       <div class="origami">
+            <center>
 <a href="http://origami.me/chameleon/"><img src="chameleon.png" width="200px" height="200px" ></a>
-<p><i>Interesting facts about chameleon.</i></p>
+<h3>chameleon</h3>
+</center>
 <ul>
 
      <li>Chameleon are reptiles that are part of iguana suborder</li>
@@ -30,8 +40,10 @@
 </ul>
 </div>
 <div class="origami">
+      <center>
 <a href="http://origami.me/camel/"><img src="camel.png" width="200px" height="200px" ></a>
-<p><i>Interesting facts about camel.</i></p>
+<h3>Camel</h3>
+</center>
 <ul>
 
      <li>Camels ears are furry.</li>
@@ -40,8 +52,10 @@
 </ul>
 <div>
       <div class="origami">
+            <center>
 <a href="http://origami.me/pigeon/"><img src="pigeon.png" width="200px" height="200px" ></a>
-<p><i>Interesting facts about pigeon.</i></p>
+<h3>pigeon</h3>
+</center>
 <ul>
 
      <li>Pigeons are economically complex and intelligent animals.</li>
@@ -50,8 +64,10 @@
 </ul>
 <div>
       <div class="origami">
+            <center>
 <a href="http://origami.me/panda/"><img src="panda.png" width="200px" height="200px" ></a>
-<p><i>Interesting facts about panda.</i></p>
+<h3>panda</h3>
+</center>
 <ul>
 
      <li>They have great camouflage for their environment. </li>
@@ -63,7 +79,7 @@
 
 
 </body>
-
+</html>
 
 
 
